<resources>
    <string name="app_name">homework3</string>
    <string name="title_home">Home</string>
    <string name="title_cabinet">Cabinet</string>
    <string name="header">Add your cocktail!</string>
    <string name="preparation">Preparation</string>
    <string name="garnish">Garnish</string>
    <string name="ingredients">Ingredients</string>
    <string name="name">Name</string>
    <string name="long_drink">Long drink</string>
    <string name="submit">Submit</string>
    <string name="shot">Shot</string>
    <string name="glass">Glass</string>
    <string name="name_error_message">Please enter the cocktail name!</string>
    <string name="ingredients_error_message">Please enter the cocktail\'s ingredients!</string>
    <string name="garnish_error_message">Please enter the cocktail\'s garnish!</string>
    <string name="instructions_error_message">Please enter the instructions for the cocktail!</string>
    <string name="type_error_message">Please pick the cocktail type!</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_on">Notifications on</string>
    <string name="picture_url">Picture URL</string>
    <string name="type">Type</string>
</resources>