<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:layout_editor_absoluteX="287dp"
    tools:layout_editor_absoluteY="61dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/home_bg"
        android:id="@+id/constraintLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:fontFamily="@font/cherry"
            android:gravity="center"
            android:id="@+id/header"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:text="@string/header"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.561"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            style="@style/Widget.AppCompat.EditText"
            android:fontFamily="@font/cherry"
            android:gravity="center"
            android:hint="@string/name"
            android:id="@+id/enter_name"
            android:inputType="textPersonName"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:fontFamily="@font/cherry"
            android:gravity="center"
            android:hint="@string/ingredients"
            android:id="@+id/enter_ingredients"
            android:inputType="textPersonName"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_name"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:fontFamily="@font/cherry"
            android:gravity="center"
            android:hint="@string/garnish"
            android:id="@+id/enter_garnish"
            android:inputType="textPersonName"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_ingredients"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:fontFamily="@font/cherry"
            android:gravity="center"
            android:hint="@string/preparation"
            android:id="@+id/enter_description"
            android:inputType="textPersonName"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_garnish"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_description">

            <RadioButton
                android:fontFamily="@font/cherry"
                android:id="@+id/shot"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/shot"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:fontFamily="@font/cherry"
                android:id="@+id/longDrink"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/long_drink"
                android:textColor="@color/white" />

        </RadioGroup>


        <Button
            android:id="@+id/submit_button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:text="@string/submit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glass_spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:background="@color/white"
            android:id="@+id/glass_spinner"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_width="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeGroup"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>